--- a/src/index.css
+++ b/src/index.css
@@ -1,24 +1,34 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700;800&family=Inter:wght@300;400;500;700&display=swap");
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-
-*{
-    font-family: 'Open Sans', 'Inter';
+* {
+  font-family: "Open Sans", "Inter";
 }
 
+.shadowCard {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
 
-
-
-.inter{
-    font-family: "Inter";
+.inter {
+  font-family: "Inter";
 }
 
 @layer components {
-    .containerKu {
-      @apply max-w-7xl 2xl:mx-auto xl:mx-24 lg:mx-16 mx-8;
-    }
+  .containerKu {
+    @apply max-w-7xl 2xl:mx-auto xl:mx-24 lg:mx-16 mx-8;
   }
-  
+}
+
+.scroll::-webkit-scrollbar {
+  width: 8px; /* width of the entire scrollbar */
+}
+.scroll::-webkit-scrollbar-track {
+  background: #ffffff; /* color of the tracking area */
+}
+.scroll::-webkit-scrollbar-thumb {
+  background-color: gray; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+}
