--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,6 @@
   background: #ffffff; /* color of the tracking area */
 }
 .scroll::-webkit-scrollbar-thumb {
-  background-color: gray; /* color of the scroll thumb */
+  background-color: rgb(199, 199, 199); /* color of the scroll thumb */
   border-radius: 20px; /* roundness of the scroll thumb */
 }
